# nornir_mcp

./: .clinerules  .gitignore  Device Check.yml  Dockerfile  LICENSE  Nornir MCP.yml  README.md  docker-compose.yml  env.txt  nornir_ops.py  prompts.py  pyproject.toml  readme.md  resources.py  run.py  server.py  validation_models.py
conf/: blacklist.yaml  config.yaml  defaults.yaml  groups.yaml
conf_test/: config.yaml  defaults.yaml  hosts.yaml
resources/: cisco_ios_commands.json  topology.json
