[project]
name = "nirnor-mcp"
version = "0.1.0"
description = "Nornir MCP server for network automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Network Automation Team" }
]
dependencies = [
    "nornir==3.5.0",
    "nornir-napalm",
    "fastmcp",
    "sse-starlette",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nornir_ops.py", "server.py"]

[tool.hatch.metadata]
allow-direct-references = true
